--- a/.pyportion.yml
+++ b/.pyportion.yml
@@ -3,3 +3,36 @@ version: 1.0.0
 description: A CLI Template.
 author: PyPortion Team
 type: cli
+source:
+    link: https://github.com/pyportion/cli-template
+    tag: main
+
+portions:
+    - name: command
+      steps:
+          - type: ask
+            question: What is the command name?
+            variable: command_name
+
+          - type: copy
+            from_path: ["handler.py"]
+            to_path: ["cli", "handler", "$command_name.py"]
+
+          - type: replace
+            path: ["cli", "handler", "$command_name.py"]
+            replacements:
+                - keyword: COMMAND_CLASS_NAME
+                  value: $command_name
+                  mode: pascalcase
+
+                - keyword: COMMAND_HANDLER_NAME
+                  value: $command_name
+                  mode: pascalcase
+
+                - keyword: COMMAND_VAR_NAME
+                  value: $command_name
+                  mode: camelcase
+
+                - keyword: COMMAND_NAME_FUNTION
+                  value: $command_name
+                  mode: camelcase
